API Allowing multiple mode in scores in //     * score of single game     * score of a set containing multiple games     * proper serialization and deserialization