@@ -100,9 +100,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                </configuration>
+                    <source>17</source>
+                    <target>17</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
             </plugin>
         </plugins>
 	</build>
